objects/LAT_BR_Billing_Proposal__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_BP_Credit_Analisis__c</fullName>
        <label>Credit Analisis</label>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipLabel>LAT_BR_Billing Proposals</relationshipLabel>
        <relationshipName>LAT_BR_Billing_Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BP_FY__c</fullName>
        <label>FY</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BP_Previous_FY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous FY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BP_Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>July-September</fullName>
                </value>
                <value>
                    <fullName>October-December</fullName>
                </value>
                <value>
                    <fullName>January-March</fullName>
                </value>
                <value>
                    <fullName>April-June</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_BP_Value__c</fullName>
        <label>Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LAT_BR_Billing Proposal</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>LAT_BR_Billing Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT_BR_Billing Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>